--- a/gpt4all-bindings/python/mkdocs.yml
+++ b/gpt4all-bindings/python/mkdocs.yml
@@ -10,18 +10,17 @@ use_directory_urls: false
 nav:
     - 'Home': 'index.md'
     - 'Desktop': 
-      - 'desktop/desktop_home.md'
-      - 'Install' : 'desktop/desktop_install.md'
-      - 'Explore' : 'desktop/desktop_tour.md'
-      - 'RAG' : 'desktop/desktop_localdocs.md'
-    - 'Python': 
-      - 'python/python_home.md'
-      - 'RAG': 'python/python_rag.md'
-      - 'Monitoring': 'python/python_monitoring.md'
-      - 'API Reference': 'python/python_ref.md'
+      - 'gpt4all_desktop/home.md'
+      - 'Explore' : 'gpt4all_desktop/explore.md'
+      - 'RAG' : 'gpt4all_desktop/localdocs.md'
+    - 'Python':
+      - 'gpt4all_python/home.md'
+      - 'RAG': 'gpt4all_python/rag.md'
+      - 'Monitoring': 'gpt4all_python/monitoring.md'
+      - 'API Reference': 'gpt4all_python/ref.md'
     - 'Help':
-      - 'FAQ': 'help/help_faq.md'
-      - 'Troubleshooting': 'help/help_troubleshooting.md'
+      - 'FAQ': 'gpt4all_help/faq.md'
+      - 'Troubleshooting': 'gpt4all_help/troubleshooting.md'
     - 'Old':
       - 'old/index.md'
       - 'GPT4All Chat Client': 'old/gpt4all_chat.md'
