--- a/gpt4all-bindings/python/mkdocs.yml
+++ b/gpt4all-bindings/python/mkdocs.yml
@@ -12,10 +12,10 @@ nav:
     - 'Desktop': 
       - 'gpt4all_desktop/home.md'
       - 'Explore' : 'gpt4all_desktop/explore.md'
-      - 'RAG' : 'gpt4all_desktop/localdocs.md'
+      - 'Local' : 'gpt4all_desktop/localdocs.md'
     - 'Python':
       - 'gpt4all_python/home.md'
-      - 'RAG': 'gpt4all_python/rag.md'
+      - 'Guide': 'gpt4all_python/guide.md'
       - 'Monitoring': 'gpt4all_python/monitoring.md'
       - 'API Reference': 'gpt4all_python/ref.md'
     - 'Help':
